# rnnoise4j

./: .gitignore  build.gradle  gradle.properties  pom.xml  readme.md  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml
native/: CMakeLists.txt
native/cmake/: zig-aarch64-android.cmake  zig-aarch64-linux-gnu.cmake  zig-aarch64-macos.cmake  zig-aarch64-windows-gnu.cmake  zig-ar.bat  zig-base.cmake  zig-cc.bat  zig-ranlib.bat  zig-x86_64-android.cmake  zig-x86_64-linux-gnu.cmake  zig-x86_64-macos.cmake  zig-x86_64-windows-gnu.cmake
native/cmake/rnnoise/: CMakeLists.txt  rnnoise_data.c  rnnoise_data.h
native/include/: exceptions.h  java_exceptions.h  macros.h  rnnoise4j.h
native/src/: java_exceptions.c  rnnoise.c  rnnoise4j.c  rnnoise4j_jni.c
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
rust/src/rnnoise/: exceptions.rs  mod.rs  rnnoise.rs
src/main/ffm/de/maxhenkel/rnnoise4j/: Denoiser.java
src/main/java/de/maxhenkel/rnnoise4j/: Denoiser.java  LibraryLoader.java  RNNoise.java  UnknownPlatformException.java
src/main/jni/de/maxhenkel/rnnoise4j/: Denoiser.java  DenoiserBase.java
src/main/resources/: RNNOISELESS_LICENSE  RNNOISE_LICENSE
src/test/java/de/maxhenkel/rnnoise4j/: Benchmarks.java  DenoiserTest.java  TestUtils.java
